# Python-DBoW3

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
DBoW3/: CMakeLists.txt
DBoW3/include/DBoW3/: Vocabulary.h
DBoW3/src/: BowVector.h  FeatureVector.h  Vocabulary.cpp
DBoW3/utils/: CMakeLists.txt
cmake/: FindNumPy.cmake
src/: pydbow3.cpp
src/wrapper/: wrapper_vocabulary.h
